--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20px">
       <tr>
-          <td><img src="Ayush.png" alt="Auyush" width="200" height="200"></td>
+          <td><img src="images/Ayush.png" alt="Auyush" width="200" height="200"></td>
       <td>
             <h1>Ayush Manral</h1>
             <p><em>I am 23 year old working as a QA. I love <strong>playing football. </strong>  </em></p>
