--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li>GTA 5</li>
       <li>Fifa</li>
     </ul>
-  <a href="Random.html">Random</a>
+  <a href="random.html">Random</a>
 
   <hr />
 
