--- a/index.html
+++ b/index.html
@@ -1,84 +1,151 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ayush's Portfolio</title>
-  </head>
-  <body>
-    <table cellspacing="20px">
-      <tr>
-          <td><img src="images/Ayush.png" alt="Auyush" width="200" height="200"></td>
+<head>
+  <meta charset="utf-8">
+  <title>Ayush's Portfolio</title>
+</head>
+<body>
+  <table cellspacing="20px">
+    <tr>
+      <td><img src="images/Ayush.png" alt="Auyush" width="200" height="200"></td>
       <td>
-            <h1>Ayush Manral</h1>
-            <p><em>I am 23 year old working as a QA. I love <strong>playing football. </strong>  </em></p>
+        <h1>Ayush Manral</h1>
+        <p><em>I am 23 year old working as a QA. I am from <strong> Mumbai, India </strong>  </em></p>
       </td>
-      </tr>
-    </table>
-    <hr>
-    <h4>Some of my favourate Games</h4>
-    <ul>
-      <li><a href="https://playvalorant.com/en-us/">Valorant</a></li>
-      <li>GTA 5</li>
-      <li>Fifa</li>
-    </ul>
-  <a href="random.html">Random</a>
+    </tr>
+  </table>
 
-  <hr />
+  <hr size=3px color="#6e5d2a">
+
+                                                        <!-- Education -->
+  <h3>Education</h3>
+  <table cellspacing="15">
+    <thead>
+      <th>Year</th>
+      <th>Course</th>
+      <th>Instiute</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2014</td>
+        <td> <center> 10th </center></td>
+        <td>DAV Public School,Airoli</td>
+      </tr>
+      <tr>
+        <td>2017</td>
+        <td><center> 12th </center></td>
+        <td>Wamanrao College</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td><center> Graduation( BSC I.T ) </center></td>
+        <td>Mulund College of Commerce</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td><center> Post Graduation(PGD I.T ) </center> </td>
+        <td>Garware College, Kalina</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <hr size=3px/>
+
+                                              <!-- Experience -->
 
   <h3> Experiences </h3>
-  <table cellspacing=7px>
+  <table cellspacing=10px>
     <thead>
       <tr>
         <th>Year</th>
         <th>Name</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020-2021</td>
-        <td>Here Tech</td>
-      </tr>
-      <tr>
-        <td>2022</td>
-        <td>Cognizant</td>
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-  </table>
-
-<hr />
-
-<h4>Skills</h4>
-  <table cellspacing=7px>
-    <tbody>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
+      </thead>
+      <tbody>
         <tr>
-          <td>Python</td>
-          <td>⭐⭐⭐</td>
+          <td>2020-2021</td>
+          <td>Here Technology</td>
         </tr>
-      </tr>
-      <tr>
-        <td>Selenium</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
+        <tr>
+          <td>2022</td>
+          <td>Cognizant</td>
+        </tr>
+      </tbody>
+      <tfoot>
+      </tfoot>
+    </table>
+
+    <hr size=3px>
+
+                                                  <!-- Skills -->
+
+    <h4>Skills</h4>
+    <table cellspacing=7px>
+      <tbody>
+        <tr>
+          <td>Java</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+        </tr>
+        <tr>
+          <td>Selenium</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
         <td>Web Development</td>
         <td>⭐⭐⭐⭐</td>
       </tr>
-
     </tbody>
   </table>
 
-  <hr />
+  <hr size=3px>
+
+                                                  <!-- Hobbies -->
+
+  <h3>Hobbies</h3>
+  <ol>
+    <li> Football </li>
+    <li> Batminton </li>
+    <li> Video Games </li>
+  </ol>
+
+  <hr size=3px>
+
+                                            <!-- Fav Games -->
+
+  <h4>Some of my favourate Games</h4>
+  <ul>
+    <li><a href="https://playvalorant.com/en-us/">Valorant</a></li>
+    <li><a href="https://www.rockstargames.com/gta-v"> GTA 5 </a></li>
+    <li> <a href="https://www.rockstargames.com/gta-v"> Fifa </a></li>
+  </ul>
+  <a href="random.html" target="_blank">Random</a>
+
+  <hr  size=3px/ >
+
+                                                  <!-- Social -->
+
   <h3>My Socials</h3>
-  <a href="https://www.instagram.com">Instagram</a><br>
-  <hr>
+  <br>
+  <img src="https://cdn3.iconfinder.com/data/icons/social-media-chamfered-corner/154/facebook-512.png" width="20" height="20" alt="Facebook-Icon">
+  <a href="https://www.facebook.com/ayushmanral" target="_blank"> Facebook</a><br><br>
+  <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-03-512.png" width="20" height="20" alt="Instagram-Icon">
+  <a href="https://www.instagram.com/ayushmanral/" target="_blank" > Instagram </a><br><br>
+  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" width="20" height="20" alt="Twitter-Icon">
+  <a href="https://mobile.twitter.com/Ayush18Manral" target="_blank"> Twitter</a><br><br>
+
+
+  <hr size=3px>
+
+                                                <!-- Contact Me -->
+
+  <h3><strong> Want to contact me? </strong></h3>
   <a href="contact.html" target="_blank">Contact</a>
 
+  <br><br><br>
 
-  </body>
+</body>
 </html>
