--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <ul>
     <li><a href="https://playvalorant.com/en-us/">Valorant</a></li>
     <li><a href="https://www.rockstargames.com/gta-v"> GTA 5 </a></li>
-    <li> <a href="https://www.rockstargames.com/gta-v"> Fifa </a></li>
+    <li> <a href="https://www.ea.com/games/fifa/fifa-23"> Fifa </a></li>
   </ul>
   <a href="random.html" target="_blank">Random</a>
 
